istio-security-meetup-04162020/peer.authentication.policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ecomm-peer-authn-policy
spec:
  mtls:
    mode: STRICT
