istio-security-meetup-04162020/order.processing.mod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment 
  labels:
    app: orders 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: prabath/com.manning.mss.ch12.order:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: orders-application-properties
            mountPath: "/opt/application.properties"
            subPath: "application.properties"    
      volumes:
        - name: orders-application-properties
          configMap:
            name: orders-application-properties-config-map
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
 type: ClusterIP
 selector:
  app: orders
 ports:
 - name: http
   protocol: TCP
   port: 80
   targetPort: 8443
